--- a/templates/capa.html
+++ b/templates/capa.html
@@ -17,7 +17,7 @@
 	</td>
 
 	<td>
-	<img src=/{{ MEDIA_URL }}media/imagens/py1.png height="375" width="375">    
+	<img src=/{{ MEDIA_URL }}media/imagens/py_2.png height="375" width="375">    
 	</td>
 	
 	</table>
