--- a/templates/slide8.html
+++ b/templates/slide8.html
@@ -6,25 +6,24 @@
 
 <div class="container">
 
-	<div class="coluna col4 sidebar">
-		<img src=/{{ MEDIA_URL }}media/imagens/xkcd_3.PNG height="400" width="400">
-	</div>
 
-	<div class="coluna col8">
-		<h3>
+       <div class="coluna col4">
+                <h3>
+		<p><li>Scripts Nagios<br><br></li>
+		<p><li>Agenda Telefônica<br><br></li>
+		<p><li>Relógio Ponto<br><br></li>
+		<p><li>Relatórios de E-mail<br><br></li>
+		<p><li>Fabric <a href="http://docs.python-guide.org/en/latest/scenarios/admin/">and others</a></li>
+                </h3>
+        </div>
 
-		<p><li>Versionamento<br><br></li>
+        <div class="coluna col8">
+                <img src=/{{ MEDIA_URL }}media/imagens/fab_1.PNG height="350" width="500">
+        </div>
 
-		<p><li>Versionamento<br><br></li>
 
-		<p><li>Kernel 4 ta ai...<a href="http://sejalivre.org/conheca-o-dnf-o-novo-gerenciador-de-pacotes-fedora/">DNF também</a>.<br><br></li>
+</div>
 
-		<p><li>O <a href="http://pt.slideshare.net/LeandroNunes85/automatizando-tarefas-shell-ao-mximo-com-expect">Expect</a> pode ser a solução para seus problemas. <br><br></li>
-
-		<p><li>Ah, é imprescindível saber usar o <a href="https://www.cs.oberlin.edu/~kuperman/help/vim/home.html">vim</a>.<br><br></li>
-
-		</h3>
-	</div>
 
 </div>
 
