--- a/templates/slide9.html
+++ b/templates/slide9.html
@@ -6,25 +6,19 @@
 
 <div class="container">
 
-	<div class="coluna col4 sidebar">
-		<img src=/{{ MEDIA_URL }}media/imagens/xkcd_3.PNG height="400" width="400">
-	</div>
 
-	<div class="coluna col8">
-		<h3>
+       <div class="coluna col4 sidebar">
+                <img src=/{{ MEDIA_URL }}media/imagens/xkcd_3.PNG height="400" width="400">
+        </div>
 
-		<p><li>Versionamento<br><br></li>
+        <div class="coluna col8">
+                <h3>
+		<p><li>Versionamento não é útil apenas para programação.<br><br></li>
+		<p><li>Ninguém gosta de documentar, mas todo mundo gosta de ver a documentação.<br><br></li>
+		<p><li>Pense em como outras ferramentas podem trazer melhorias ao seu cotidiano.<br></li>
+                </h3>
+        </div>
 
-		<p><li>Versionamento<br><br></li>
-
-		<p><li>Kernel 4 ta ai...<a href="http://sejalivre.org/conheca-o-dnf-o-novo-gerenciador-de-pacotes-fedora/">DNF também</a>.<br><br></li>
-
-		<p><li>O <a href="http://pt.slideshare.net/LeandroNunes85/automatizando-tarefas-shell-ao-mximo-com-expect">Expect</a> pode ser a solução para seus problemas. <br><br></li>
-
-		<p><li>Ah, é imprescindível saber usar o <a href="https://www.cs.oberlin.edu/~kuperman/help/vim/home.html">vim</a>.<br><br></li>
-
-		</h3>
-	</div>
 
 </div>
 
