--- a/templates/ultimo.html
+++ b/templates/ultimo.html
@@ -6,9 +6,9 @@
 
 <div class="container">
 
-	<p style="text-align:center">	<img src="/{{ MEDIA_URL }}media/imagens/thankyou.jpg" style="align:center" ></p>
+	<p style="text-align:center">	<img src="/{{ MEDIA_URL }}media/imagens/applause_4.gif" style="align:center" ></p>
 	<br><br>
-<h2>	<p style="text-align:right">	<a href="https://github.com/caparisotto/tchelinuxcx2015">https://github.com/caparisotto/tchelinuxcx2015</a></p></h2>
+<h2>	<p style="text-align:right">	<a href="https://github.com/caparisotto/pycaxias">https://github.com/caparisotto/pycaxias2016</a></p></h2>
 <h2>	<p style="text-align:right">	<a href="mailto:carlos.parisotto@mbsec.com.br">carlos.parisotto@mbsec.com.br</a></p></h2>
 	
 </div>
