--- a/templates/basespaced.html
+++ b/templates/basespaced.html
@@ -65,7 +65,7 @@
 
     <div class="navbar navbar-inverse navbar-fixed-bottom">
       <div class="collapse navbar-collapse">
-        <a class="navbar-brand" href="http://caxias.tchelinux.org">PyCaxias 2016</a>
+        <a class="navbar-brand" href="http://pycaxias.org">PyCaxias 2016</a>
         <ul class="nav navbar-nav navbar-right">
         <a class="navbar-brand">Usando Python para ser um Sysadmin Melhor</a>
         </ul>
