--- a/templates/slide2.html
+++ b/templates/slide2.html
@@ -17,7 +17,7 @@
 	<p><h2>Porque Python?
 	<table>
         <tr>
-        <td><h3><li>Resultados em Curto Prazo &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
+        <td><h3><li>Resultados em Curto Prazo &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
         <td><h3><li>Facilidade na Integração com o Linux</li></td>
         </tr>
         </table>
@@ -26,8 +26,8 @@
 	<p><h2>Por onde começar?
 	<table>
         <tr>
-        <td><h3><li><a href="https://docs.djangoproject.com/pt-br/1.10/intro/tutorial01/">Django First App</a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
-        <td><h3><li><a href="https://osantana.me/curso-de-python-e-django/">OSantana</a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
+        <td><h3><li><a href="https://docs.djangoproject.com/pt-br/1.10/intro/tutorial01/">Django First App</a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
+        <td><h3><li><a href="https://osantana.me/curso-de-python-e-django/">OSantana</a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
         <td><h3><li><a href="http://www.w3schools.com/">W3Schools</a></li></td>
         </tr>
         </table>
