--- a/templates/slide9.html
+++ b/templates/slide9.html
@@ -1,26 +1,8 @@
-{% extends 'basespaced.html' %}
+	<img src=/{{ MEDIA_URL }}media/imagens/mbsafe_5.PNG width="1080" height="590">
 
-{% load i18n %}
-    
-{% block corpo %}
-
-<div class="container">
-
-
-       <div class="coluna col4 sidebar">
-                <img src=/{{ MEDIA_URL }}media/imagens/xkcd_3.PNG height="400" width="400">
-        </div>
-
-        <div class="coluna col8">
-                <h3>
-		<p><li>Versionamento não é útil apenas para programação.<br><br></li>
-		<p><li>Ninguém gosta de documentar, mas todo mundo gosta de ver a documentação.<br><br></li>
-		<p><li>Pense em como outras ferramentas podem trazer melhorias ao seu cotidiano.<br></li>
-                </h3>
-        </div>
-
-
-</div>
-
-{% endblock %}
-
+	{% if anterior %}
+        <a href="{{ anterior }}" accesskey="z"></a>
+	{% endif %}
+	{% if proximo %}
+        <a href="{{ proximo }}" accesskey="x"></a>
+	{% endif %}
