--- a/templates/basespaced.html
+++ b/templates/basespaced.html
@@ -24,7 +24,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="collapse navbar-collapse">
         <a class="navbar-brand"></a>
-        <a class="navbar-brand" style="font-size:2.7em;" ><em>{{ titulo }}</em></a>
+        <a class="navbar-brand" style="font-size:2.7em;" ><em>Usando Python para ser um Sysadmin Melhor</em></a>
 
         <ul class="nav navbar-nav navbar-right">
 	
@@ -66,9 +66,11 @@
     <div class="navbar navbar-inverse navbar-fixed-bottom">
       <div class="collapse navbar-collapse">
         <a class="navbar-brand" href="http://pycaxias.org">PyCaxias 2016</a>
+     <!--
         <ul class="nav navbar-nav navbar-right">
-        <a class="navbar-brand">Usando Python para ser um Sysadmin Melhor</a>
+        <a class="navbar-brand">Set2016</a>
         </ul>
+     -->
       </div>
     </div>
 
