--- a/templates/slide11.html
+++ b/templates/slide11.html
@@ -15,7 +15,8 @@
                 <h3>
 		<p><li>Versionamento não é útil apenas para programação.<br><br></li>
 		<p><li>Ninguém gosta de documentar, mas todo mundo gosta de ver a documentação.<br><br></li>
-		<p><li>Pense em como outras ferramentas podem trazer melhorias ao seu cotidiano.<br></li>
+		<p><li>Pense em como outras ferramentas podem trazer melhorias ao seu cotidiano.<br><br></li>
+		<p><li>Se não quiser ser um sysadmin melhor, continue sendo um sysadmin ruim, mas agora conhecendo Python.<br></li>
                 </h3>
         </div>
 
