--- a/templates/slide2.html
+++ b/templates/slide2.html
@@ -6,15 +6,15 @@
 
 <div class="container">
 
+	<h1>Por que Programar?</h1>
 	<table>
         <tr>
         <td><h3><li>Busca de Novas Ferramentas &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
         </tr>
         <tr>
-        <td><h3><li> Desafio Profissional </li></td>
+        <td><h3><li>Desafio Profissional </li></td>
         </tr>
         </table>
-
 
 </div>
 
