--- a/templates/slide3.html
+++ b/templates/slide3.html
@@ -6,6 +6,7 @@
 
 <div class="container">
 
+	<h1>Por que Python?</h1>
 	<table>
         <tr>
         <td><h3><li>Resultados em Curto Prazo &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
@@ -14,8 +15,6 @@
         <td><h3><li>Facilidade na Integração com o Linux</li></td>
         </tr>
         </table>
-
-
 
 </div>
 
