--- a/templates/slide4.html
+++ b/templates/slide4.html
@@ -6,12 +6,18 @@
 
 <div class="container">
 
+	<h1>Por onde começar?</h1>
 	<table>
         <tr>
-        <td><h3><li><a href="https://docs.djangoproject.com/pt-br/1.10/intro/tutorial01/">Django First App, OSantana, W3Schools</a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
+        <td><h3><li><a href="https://docs.djangoproject.com/pt-br/1.10/intro/tutorial01/">Django First App</a></li></td>
+        </tr>
+        <tr>
+        <td><h3><li><a href="https://osantana.me/curso-de-python-e-django/">OSantana</a></li></td>
+        </tr>
+        <tr>
+        <td><h3><li><a href="http://www.w3schools.com/">W3Schools</a></li></td>
         </tr>
         </table>
-
 
 </div>
 
