--- a/templates/slide4.html
+++ b/templates/slide4.html
@@ -6,7 +6,7 @@
 
 <div class="container">
 
-	<h1>Por onde começar?</h1>
+	<h1><b>Por onde começar?</b></h1>
 	<table>
         <tr>
         <td><h3><li><a href="https://docs.djangoproject.com/pt-br/1.10/intro/tutorial01/">Django First App</a></li></td>
@@ -16,6 +16,9 @@
         </tr>
         <tr>
         <td><h3><li><a href="http://www.w3schools.com/">W3Schools</a></li></td>
+        </tr>
+        <tr>
+        <td><h3><li><a href="https://www.youtube.com/user/cursosemvideo/videos">Curso em Video - Python</a></li></td>
         </tr>
         </table>
 
