--- a/templates/slide3.html
+++ b/templates/slide3.html
@@ -6,7 +6,7 @@
 
 <div class="container">
 
-	<h1>Por que Python?</h1>
+	<h1><b>Por que Python?</b></h1>
 	<table>
         <tr>
         <td><h3><li>Resultados em Curto Prazo &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </li></td>
